# sqler

./: .clang-format  .clang-tidy  .clazy  .gitignore  .qmlformat.ini  .qmllint.ini  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODEMAP.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  Makefile  PLAN.md  README.md  rustfmt.toml
assets/: resources.qrc
assets/qml/: Main.qml  Theme.qml
assets/qml/Dialogs/: NewConnectionDialog.qml
assets/qml/Dialogs/ConnectionTypes/: DatabaseTypeSelector.qml  MongoDBForm.qml  MySQLForm.qml  OracleForm.qml  PostgreSQLForm.qml  RedisForm.qml  SQLServerForm.qml  SQLiteForm.qml
assets/qml/Views/: TablesPane.qml
crates/sqler-app/: Cargo.toml
crates/sqler-app/examples/: grid.rs  panel.rs
crates/sqler-app/src/: main.rs
crates/sqler-app/src/app/: mod.rs
crates/sqler-app/src/comps/: icon.rs
crates/sqler-app/src/create/: mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
crates/sqler-app/src/transfer/: dump.rs  exec.rs  export.rs  import.rs  mod.rs
crates/sqler-app/src/workspace/: common.rs  mod.rs  mongodb.rs  redis.rs
crates/sqler-core/: Cargo.toml
crates/sqler-core/src/: lib.rs  paths.rs
crates/sqler-core/src/cache/: mod.rs
crates/sqler-core/src/driver/: mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
crates/sqler-task/: Cargo.toml
crates/sqler-task/examples/: dump.rs
crates/sqler-task/src/: dump.rs  exec.rs  export.rs  import.rs  main.rs
docs/: SQL支持.md  备忘录.md  导入导出.md  数据源.md  数据源配置.md
docs/manual/mongodb/: 安装过程.md
docs/manual/mysql/: 安装过程.md
docs/manual/postgres/: 安装过程.md
docs/testdata/: generate.py  table-gen.py
examples/: grid.rs  scrollable.rs
qml/: Main.qml  Theme.qml  resources.qrc
qml/Dialogs/: NewConnectionDialog.qml
qml/Dialogs/ConnectionTypes/: DatabaseTypeSelector.qml  MySQLForm.qml  RedisForm.qml
res/: resources.qrc
rs/: Cargo.toml  README.md  build.rs  cbindgen.toml
rs/scripts/: build.sh
rs/src/: context.rs  error.rs  ffi.rs  lib.rs  mongo.rs  redis_kv.rs  sql_any.rs  types.rs
rs/src/export/: config.rs  error.rs  export.rs  mod.rs
scripts/: build.bat  build.sh  format.bat  format.sh  reinstall.bat  reinstall.sh  使用AI方式.md  数据源配置.md
scripts/manual/mongodb/: 安装过程.md
scripts/manual/mysql/: 安装过程.md
scripts/manual/postgres/: 安装过程.md
scripts/prompt/: 修复BUG.md
scripts/testdata/: redis-gen.py
src/: ConnectionPanel.cpp  ConnectionPanel.h  MainContent.cpp  MainContent.h  MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  TopMenuBar.cpp  TopMenuBar.h  main.cpp  main.rs  model.rs
src/app/: connections.rs  content.rs  dialog.rs  mod.rs  sidebar.rs  theme.rs  top_bar.rs  topbar.rs
src/app/comps/: mod.rs  table.rs
src/app/content/: common.rs  mysql.rs  overview.rs  query_editor.rs  redis.rs  saved_functions.rs  saved_queries.rs  table_data.rs
src/app/content/overview/: functions.rs  mod.rs  queries.rs  tables.rs  users.rs
src/app/create/: mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
src/app/transfer/: export.rs  import.rs  mod.rs  output.rs
src/app/workspace/: common.rs  keywords.json  mod.rs  mongodb.rs  mysql.rs  oracle.rs  placeholder.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
src/cache/: mod.rs
src/components/: GConnectionItem.cpp  GConnectionItem.h  GDialog.cpp  GDialog.h  GLabel.cpp  GLabel.h  GLineEdit.cpp  GLineEdit.h  GListWidget.cpp  GListWidget.h  GPushButton.cpp  GPushButton.h  GScrollArea.cpp  GScrollArea.h  GSeparator.cpp  GSeparator.h  GSpinBox.cpp  GSpinBox.h  GStyle.h  GTheme.cpp  GTheme.h  ThemedButton.cpp  ThemedButton.h  ThemedDialog.cpp  ThemedDialog.h  ThemedFormWidget.cpp  ThemedFormWidget.h  ThemedLineEdit.cpp  ThemedLineEdit.h  ThemedScrollArea.cpp  ThemedScrollArea.h  ThemedSpinBox.cpp  ThemedSpinBox.h
src/comps/: form.rs  menu.rs  mod.rs  notification.rs  popup.rs  table.rs
src/core/: Config.cpp  Config.h  ConnectionStore.cpp  ConnectionStore.h
src/db/: DbUtil.cpp  DbUtil.h  Drivers.cpp  Drivers.h
src/dialogs/: ConnectionFormBase.cpp  ConnectionFormBase.h  DatabaseTypeDialog.cpp  DatabaseTypeDialog.h  MongoDBConnectionForm.cpp  MongoDBConnectionForm.h  MySQLConnectionForm.cpp  MySQLConnectionForm.h  NewConnectionDialog.cpp  NewConnectionDialog.h  OracleConnectionForm.cpp  OracleConnectionForm.h  PostgreSQLConnectionForm.cpp  PostgreSQLConnectionForm.h  RedisConnectionForm.cpp  RedisConnectionForm.h  SQLServerConnectionForm.cpp  SQLServerConnectionForm.h  SQLiteConnectionForm.cpp  SQLiteConnectionForm.h
src/driver/: mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
src/model/: kind.rs  mod.rs  options.rs
src/option/: mod.rs  mongodb.rs  mysql.rs  oracle.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs
src/plugin/: mod.rs
src/qml/: Backend.cpp  Backend.h
src/ui/: MainWindow.cpp  MainWindow.h  NewConnectionDialog.cpp  NewConnectionDialog.h  TablesPane.cpp  TablesPane.h
src/views/: content.rs  dialog_view.rs  header.rs  main.rs  mod.rs  modal.rs  topbar.rs
src/views/create/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src/views/dialog/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src/views/workspace/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
