[package]
name = "sqler"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2"
gpui-component = "0.3"

dirs = "6"
uuid = "1"
aes-gcm = "0.10"
sea-query = "1.0.0-rc.16"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

tracing = "0.1"
tracing-subscriber = "0.3.0"

mongodb = { version = "3", features = ["sync"] }
mysql = { version = "26" }
oracle = { version = "0.6" }
postgres = { version = "0.19" }
redis = { version = "1.0.0-rc.3" }
rusqlite = { version = "0.37", features = ["bundled"] }

