[workspace]
members = [
    "crates/sqler-app",
    "crates/sqler-core",
    "crates/sqler-task",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
sqler-core = { path = "crates/sqler-core" }

gpui = { version = "0.2.2" }
gpui-component = { version = "0.5.0", features = ["tree-sitter-languages"] }

dirs = "6"
uuid = "1"
aes-gcm = "0.10"
indexmap = "2"
lsp-types = "0.97.0"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mongodb = { version = "3", features = ["sync"] }
mysql = { version = "26" }
postgres = { version = "0.19" }
redis = { version = "1.0.1", features = ["cluster"] }
rusqlite = { version = "0.37", features = ["bundled"] }

[profile.release]
lto = "thin"
strip = true
debug = false
panic = 'abort'
opt-level = 3
codegen-units = 1
