[package]
name = "sqler"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unified DB access and export with C ABI for Qt (Postgres/MySQL/SQLite/MongoDB/Redis; Oracle/MSSQL optional)"

[lib]
name = "sqler"
crate-type = ["rlib", "cdylib"]

[features]
# Default: stable backends that compile broadly
default = ["with-sqlx", "with-mongodb", "with-redis"]

# Backends
with-sqlx = ["dep:sqlx"]
with-mongodb = ["dep:mongodb"]
with-redis = ["dep:redis"]
with-oracle = ["dep:oracle"]
with-mssql = ["dep:tiberius", "dep:tokio-util"]

[dependencies]
async-trait = "0.1"
once_cell = "1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
base64 = "0.22"
csv = { version = "1" }
log = "0.4"
env_logger = "0.11"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# SQL (Postgres/MySQL/SQLite) via sqlx Any
sqlx = { version = "0.7", default-features = false, optional = true, features = [
    "any",
    "runtime-tokio-rustls",
    "sqlite",
    "mysql",
    "postgres",
    "chrono",
    "json"
]}

# MongoDB
mongodb = { version = "2", default-features = false, optional = true, features = ["tokio-runtime"] }

# Redis (use sync client; run in blocking threads)
redis = { version = "0.23", optional = true }

# Optional: Oracle (sync)
oracle = { version = "0.5", optional = true }

# Optional: SQL Server via Tiberius (async)
tiberius = { version = "0.12", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["compat"] }

# Export no longer uses rusqlite; we rely on SQLx for SQLite too

[package.metadata.docs.rs]
features = ["with-sqlx", "with-mongodb", "with-redis", "with-export-sqlite"]
