[package]
name = "sqler-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sqler"
path = "src/main.rs"

[dependencies]
sqler-core.workspace = true

gpui.workspace = true
gpui-component.workspace = true

dirs.workspace = true
uuid.workspace = true
indexmap.workspace = true
lsp-types.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
