[package]
name = "sqler-app"
version.workspace = true
edition.workspace = true

[dependencies]
sqler-core.workspace = true

gpui.workspace = true
gpui-component.workspace = true

chrono.workspace = true
dirs.workspace = true
indexmap.workspace = true
lsp-types.workspace = true
rust-embed.workspace = true
uuid.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
